tests/fixtures/syntax/valid/case_block_without_final_newline.repor
case "closing brace at end of input" {
  $ true
  assert { exit 0 }
}