tests/fixtures/syntax/invalid/exit_code_out_of_range.repor
case "exit out of range" {
  $ true
  assert {
    exit 256
  }
}
